# PPTI

./: build-linux  build-mac  setup.sh
mini-ppti/: CONTEXT.md  NEXT_CODEX.md  README.md
mini-ppti/cpp/: CMakeLists.txt
mini-ppti/cpp/include/: ckks_runner.h  profiler.h
mini-ppti/cpp/src/: ckks_runner.cpp  main.cpp  profiler.cpp
mini-ppti/python/: cost_model.py  fusion.py  graph.py  he_bridge.py  he_costs.py  ops.py  partition.py  run_experiment.py  test_he_bridge.py
mini-ppti/results/: baseline_results.csv  baseline_results_template.csv  comparison_family.csv  head_to_head_local_gelu.csv  head_to_head_local_primary.csv  head_to_head_local_subset.csv  nexus_results.csv  nexus_results_template.csv  paper_aligned_smoke.csv
mini-ppti/scripts/: compare_benchmarks.py  run_baseline_suite.py  run_head_to_head_comparison.py  run_nexus_like_baseline.py
